--- a/views/luckysheet.hbs
+++ b/views/luckysheet.hbs
@@ -5,23 +5,22 @@
 <link rel="stylesheet" href="https://bossanova.uk/jspreadsheet/v4/jexcel.css" type="text/css" />
 <script src="jspreadsheet.js"></script>
 
-<button id="save">Save</button>
-<p id="status"></p>
-
-<div id="spreadsheet"></div>
+<div id="spreadsheet" style="max-width: 90vw; max-height: 82vh; overflow: scroll;"></div>
 {{{script}}}
 
 <script>
-  let mainSheet = jspreadsheet(document.getElementById('spreadsheet'), {data: data});
+  let mainSheet = jspreadsheet(document.getElementById('spreadsheet'), {data: data, minDimensions: [20,18]});
 
-  let save = document.getElementById('save');
+  const save = document.getElementById('save-custom');
+  const saveAndClose = document.querySelector('#saveAndClose-custom');
+
   save.addEventListener('click', async () => {
     let blob = mainSheet.getBlob(undefined, mimeType);
     let base64Blob = await blobToBase64(blob);
 
+    const closeHang = setAlert(`<div class="spinner-border spinner-border-sm" role="status"><span class="visually-hidden">Loading...</span></div> Hang tight, saving data to Salesforce...`, 'warning');
     save.disabled = true;
-    document.querySelector('#status').innerText = 'Hang tight! Saving data to salesforce...';
-
+    saveAndClose.disabled = true;
     fetch('/saveXlsx', {
       method: 'POST',
       headers: {
@@ -35,14 +34,53 @@
       }),
     })
     .then(response => {
-        document.querySelector('#status').innerText = 'Data saved';
-        save.disabled = false;
+        closeHang.click();
+          setAlert('Data saved', 'success');
+          save.disabled = false;
+          saveAndClose.disabled = false;
     })
     .catch((err) => {
-        document.querySelector('#status').innerText = err.message;
+        closeHang.click();
+        setAlert(err.message, 'danger');
         save.disabled = false;
+        saveAndClose.disabled = false;
     })
+  })
 
+  saveAndClose.addEventListener('click', async () => {
+    let blob = mainSheet.getBlob(undefined, mimeType);
+    let base64Blob = await blobToBase64(blob);
+
+    const closeHang = setAlert(`<div class="spinner-border spinner-border-sm" role="status"><span class="visually-hidden">Loading...</span></div> Hang tight, saving data to Salesforce...`, 'warning');
+    save.disabled = true;
+    saveAndClose.disabled = true;
+    fetch('/saveXlsx', {
+      method: 'POST',
+      headers: {
+          'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        data: mainSheet.getData(),
+        ext, 
+        name, 
+        conDocId, 
+      }),
+    })
+    .then(response => {
+        closeHang.click();
+        setAlert('Data saved', 'success');
+        save.disabled = false;
+        saveAndClose.disabled = false;
+        setTimeout(() => {
+            window.close();
+          }, 500)
+    })
+    .catch((err) => {
+        closeHang.click();
+        setAlert(err.message, 'danger');
+        save.disabled = false;
+        saveAndClose.disabled = false;
+    })
   })
 
   function blobToBase64(blob) {
